# Explore_MCXN_multicore

./: CMakeLists.txt  README.md
src/Variant/Platform/Platform_MCXN/: Platform_MCXN_core0_build.cmake  Platform_MCXN_core1_build.cmake  Platform_MCXN_toolchain.cmake
src/device/core0/: MCXN947_cm33_core0_COMMON.h
src/device/core1/: MCXN947_cm33_core1_COMMON.h
src/startup/: startup_mcxn947_cm33_core1.c
src/utilities/: fsl_debug_console.c
